2014-12-23 huku <huku@grhack.net>

    * Class `XED' was renamed to `Decoder'.
    * Fixed typo in "README.md" and "NOTES.md".


2014-12-10 huku <huku@grhack.net>

    * Introduced new class `Rflags' that represents the CPU flags register
      contents.
    * Implemented new methods in class `Instruction'.
    * Added "dump_rflags.py" in "examples/".


2014-11-25 huku <huku@grhack.net>

    * Implemented new methods in class `Instruction'.


2014-10-20 huku <huku@grhack.net>

    * Implemented new methods in class `Instruction' and class `Operand'.
    * Cleaned up and reordered function definitions in "operand.c".
    * Fixed several compiler warnings on LLVM (Mac OS X).
    * Functions `is_register()' and `is_memory_addressing_register()' of class
      `Operand' were modified to return a boolean.
    * `XED_OPERAND_WIDTH_XXX' and `XED_OPERAND_XTYPE_XXX' constants are now 
      visible to Python.
    * Added "NOTES.md".
    * Removed "test.py" and added a couple of examples in "examples/".


2014-10-01 huku <huku@grhack.net>

    * Implemented several new methods in class `Instruction'.
    * Cleaned up and reordered function definitions in "instruction.c".
    * `XED_REG_XXX' constants are now visible to Python.
    * Added `M_VARARGS()' and `M_NOARGS()' macros; `PyMethodDef[]' definitions
      are now much more readable.
    * Modified all `PyCFunction' definitions to receive specific data types as
      `self' instead of `PyObject *' (this is how they do it in the official
      Python sources).


2014-09-16 huku <huku@grhack.net>

    * Fixed `snprintf()' related compiler warning on 64-bit systems.
    * Replaced `PyLong_AsSize_t()' with `PyLong_AsLong()'; the first may return
      -1 even though it shouldn't.
    * From now on, we only support Pin >= 2.14.


2014-09-15 huku <huku@grhack.net>

    * Instantiating `Instruction' and `Operand' objects by hand is not possible
      any more.


2014-09-11 huku <huku@grhack.net>
